# PubIQ

./: Cargo.toml  README.md  question-tool.html  questions.json
src/: external_apis.rs  game.rs  helpers.rs  main.rs  questions.rs  rest_api.rs
web/: index.html  presenter.css  presenter.html  presenter.js  service.js  style.css
