[package]
name = "pubiq"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = "0.29.0"
rand = "0.9.0"
rouille = "3.6.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
uptime_lib = "0.3.1"
ureq = "3.0.10"

[dependencies.uuid]
version = "1.15.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
